--- a/to_do_frontend/package.json
+++ b/to_do_frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^1.7.9",
     "vue": "^3.5.13"
   },
