--- a/to_do_frontend/package.json
+++ b/to_do_frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^1.7.9",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
